include/lnGPIO.h

/**
 */
enum lnGpioMode
{
    lnFLOATING = 0,
    lnINPUT_FLOATING = 1,
    lnINPUT_PULLUP = 2,
    lnINPUT_PULLDOWN = 3,
    lnOUTPUT = 4,
    lnOUTPUT_OPEN_DRAIN = 5,
    lnALTERNATE_PP,
    lnALTERNATE_OD,
    lnPWM,
    lnADC_MODE,
    lnDAC_MODE,
    lnUART,
    lnSPI_MODE,
    lnUART_Alt,
};
// typedef int lnPin;
void lnPinMode(const lnPin pin, const lnGpioMode mode, const uint32_t speedInMhz = 0);
void lnDigitalWrite(const lnPin pin, bool value);
bool lnDigitalRead(const lnPin pin);
void lnDigitalToggle(const lnPin pin);
void lnOpenDrainClose(const lnPin pin, const bool close); // if true, the open drain is passing, else it is hiz
volatile uint32_t *lnGetGpioToggleRegister(uint32_t port); // Bop register for port "port" with port A:0, B:1, ...
volatile uint32_t *lnGetGpioDirectionRegister(
    uint32_t port); // Direction register for the bit 0..7 of port "port" , A=0, B=1, ...
volatile uint32_t *lnGetGpioValueRegister(uint32_t port); // Bit value for LOW bits of port "port"
uint32_t lnReadPort(uint32_t port);
enum LnRemapTimer
{
    NoRemap = 0,
    PartialRemap = 1,
    FullRemap = 3,
};
void lnRemapTimerPin(uint32_t timer, LnRemapTimer map);