rust/rust_esprit/c_interface/lnGPIO_c.h

    volatile uint32_t *lnGetGpioOnRegister(uint32_t port);  // Bop register for port "port" with port A:0, B:1, ...
    volatile uint32_t *lnGetGpioOffRegister(uint32_t port); //