rust/rust_esprit/src/c_api/rn_gpio_esp32_c.rs

#![allow(dead_code)]
#![allow(unsafe_op_in_unsafe_fn)]
/* automatically generated by rust-bindgen 0.72.1 */

pub const _NEWLIB_VERSION: &[u8; 6] = b"4.3.0\0";
pub const _PICOLIBC_CTYPE_SMALL: u32 = 0;
pub const __HAVE_BUILTIN_COMPLEX: u32 = 1;
pub const __IO_DEFAULT: u8 = 100u8;
pub const __NEWLIB_MINOR__: u32 = 3;
pub const __NEWLIB_PATCHLEVEL__: u32 = 0;
pub const __NEWLIB_VERSION__: &[u8; 6] = b"4.3.0\0";
pub const __NEWLIB__: u32 = 4;
pub const __PICOLIBC_MINOR__: u32 = 8;
pub const __PICOLIBC_PATCHLEVEL__: u32 = 10;
pub const __PICOLIBC_VERSION__: &[u8; 7] = b"1.8.10\0";
pub const __PICOLIBC__: u32 = 1;
pub const _ATFILE_SOURCE: u32 = 1;
pub const _DEFAULT_SOURCE: u32 = 1;
pub const _ISOC99_SOURCE: u32 = 1;
pub const _ISOC11_SOURCE: u32 = 1;
pub const _ISOC23_SOURCE: u32 = 1;
pub const _POSIX_SOURCE: u32 = 1;
pub const _POSIX_C_SOURCE: u32 = 200809;
pub const _XOPEN_SOURCE: u32 = 700;
pub const _XOPEN_SOURCE_EXTENDED: u32 = 1;
pub const _LARGEFILE64_SOURCE: u32 = 1;
pub const __ATFILE_VISIBLE: u32 = 1;
pub const __BSD_VISIBLE: u32 = 1;
pub const __GNU_VISIBLE: u32 = 1;
pub const __ZEPHYR_VISIBLE: u32 = 0;
pub const __ISO_C_VISIBLE: u32 = 2023;
pub const __LARGEFILE_VISIBLE: u32 = 1;
pub const __LARGEFILE64_VISIBLE: u32 = 1;
pub const __MISC_VISIBLE: u32 = 1;
pub const __POSIX_VISIBLE: u32 = 202405;
pub const __SVID_VISIBLE: u32 = 1;
pub const __XSI_VISIBLE: u32 = 700;
pub const __SSP_FORTIFY_LEVEL: u32 = 0;
pub const __OBSOLETE_MATH_DEFAULT: u32 = 1;
pub const __OBSOLETE_MATH: u32 = 1;
pub const __OBSOLETE_MATH_FLOAT: u32 = 1;
pub const __OBSOLETE_MATH_DOUBLE: u32 = 1;
pub const __RAND_MAX: u32 = 2147483647;
pub const __have_longlong64: u32 = 1;
pub const __have_long32: u32 = 1;
pub const __SCHAR_WIDTH__: u32 = 8;
pub const __LONG_LONG_WIDTH__: u32 = 64;
pub const ___int8_t_defined: u32 = 1;
pub const ___int16_t_defined: u32 = 1;
pub const ___int32_t_defined: u32 = 1;
pub const ___int64_t_defined: u32 = 1;
pub const ___int_least8_t_defined: u32 = 1;
pub const ___int_least16_t_defined: u32 = 1;
pub const ___int_least32_t_defined: u32 = 1;
pub const ___int_least64_t_defined: u32 = 1;
pub const __HAVE_BUILTIN_ADD_OVERFLOW: u32 = 1;
pub const __HAVE_BUILTIN_ALLOCA: u32 = 1;
pub const __HAVE_BUILTIN_COPYSIGN: u32 = 1;
pub const __HAVE_BUILTIN_COPYSIGNL: u32 = 1;
pub const __HAVE_BUILTIN_CTZ: u32 = 1;
pub const __HAVE_BUILTIN_CTZL: u32 = 1;
pub const __HAVE_BUILTIN_CTZLL: u32 = 1;
pub const __HAVE_BUILTIN_FFS: u32 = 1;
pub const __HAVE_BUILTIN_FFSL: u32 = 1;
pub const __HAVE_BUILTIN_FFSLL: u32 = 1;
pub const __HAVE_BUILTIN_ISFINITE: u32 = 1;
pub const __HAVE_BUILTIN_ISINF: u32 = 1;
pub const __HAVE_BUILTIN_ISNAN: u32 = 1;
pub const __HAVE_BUILTIN_MUL_OVERFLOW: u32 = 1;
pub const __GNUCLIKE_PRAGMA_DIAGNOSTIC: u32 = 1;
pub const __int8_t_defined: u32 = 1;
pub const __int16_t_defined: u32 = 1;
pub const __int32_t_defined: u32 = 1;
pub const __int64_t_defined: u32 = 1;
pub const __int20: u32 = 2;
pub const __int20__: u32 = 2;
pub const __INT8: &[u8; 3] = b"hh\0";
pub const __INT16: &[u8; 2] = b"h\0";
pub const __INT64: &[u8; 3] = b"ll\0";
pub const __FAST8: &[u8; 3] = b"hh\0";
pub const __FAST16: &[u8; 2] = b"h\0";
pub const __FAST64: &[u8; 3] = b"ll\0";
pub const __LEAST8: &[u8; 3] = b"hh\0";
pub const __LEAST16: &[u8; 2] = b"h\0";
pub const __LEAST64: &[u8; 3] = b"ll\0";
pub const __int_least8_t_defined: u32 = 1;
pub const __int_least16_t_defined: u32 = 1;
pub const __int_least32_t_defined: u32 = 1;
pub const __int_least64_t_defined: u32 = 1;
pub const __int_fast8_t_defined: u32 = 1;
pub const __int_fast16_t_defined: u32 = 1;
pub const __int_fast32_t_defined: u32 = 1;
pub const __int_fast64_t_defined: u32 = 1;
pub const WINT_MIN: u32 = 0;
pub type __int8_t = cty::c_schar;
pub type __uint8_t = cty::c_uchar;
pub type __int16_t = cty::c_short;
pub type __uint16_t = cty::c_ushort;
pub type __int32_t = cty::c_int;
pub type __uint32_t = cty::c_uint;
pub type __int64_t = cty::c_longlong;
pub type __uint64_t = cty::c_ulonglong;
pub type __int_least8_t = cty::c_schar;
pub type __uint_least8_t = cty::c_uchar;
pub type __int_least16_t = cty::c_short;
pub type __uint_least16_t = cty::c_ushort;
pub type __int_least32_t = cty::c_int;
pub type __uint_least32_t = cty::c_uint;
pub type __int_least64_t = cty::c_longlong;
pub type __uint_least64_t = cty::c_ulonglong;
pub type __intmax_t = cty::c_longlong;
pub type __uintmax_t = cty::c_ulonglong;
pub type __intptr_t = cty::c_int;
pub type __uintptr_t = cty::c_uint;
pub type intmax_t = __intmax_t;
pub type uintmax_t = __uintmax_t;
pub type int_least8_t = __int_least8_t;
pub type uint_least8_t = __uint_least8_t;
pub type int_least16_t = __int_least16_t;
pub type uint_least16_t = __uint_least16_t;
pub type int_least32_t = __int_least32_t;
pub type uint_least32_t = __uint_least32_t;
pub type int_least64_t = __int_least64_t;
pub type uint_least64_t = __uint_least64_t;
pub type int_fast8_t = cty::c_schar;
pub type uint_fast8_t = cty::c_uchar;
pub type int_fast16_t = cty::c_short;
pub type uint_fast16_t = cty::c_ushort;
pub type int_fast32_t = cty::c_int;
pub type uint_fast32_t = cty::c_uint;
pub type int_fast64_t = cty::c_longlong;
pub type uint_fast64_t = cty::c_ulonglong;
#[repr(i32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum lnPin {
    GPIO0 = 0,
    GPIO1 = 1,
    GPIO2 = 2,
    GPIO3 = 3,
    GPIO4 = 4,
    GPIO5 = 5,
    GPIO6 = 6,
    GPIO7 = 7,
    GPIO8 = 8,
    GPIO9 = 9,
    GPIO10 = 10,
    GPIO11 = 11,
    GPIO12 = 12,
    GPIO13 = 13,
    GPIO14 = 14,
    GPIO15 = 15,
    GPIO16 = 16,
    GPIO17 = 17,
    GPIO18 = 18,
    GPIO19 = 19,
    GPIO20 = 20,
    GPIO21 = 21,
    GPIO22 = 22,
    GPIO23 = 23,
    GPIO24 = 24,
    GPIO25 = 25,
    GPIO26 = 26,
    GPIO27 = 27,
    GPIO28 = 28,
    GPIO29 = 29,
    GPIO30 = 30,
    GPIO31 = 31,
    GPIO32 = 32,
    GPIO33 = 33,
    GPIO34 = 34,
    GPIO35 = 35,
    GPIO36 = 36,
    GPIO37 = 37,
    GPIO38 = 38,
    GPIO39 = 39,
    NoPin = -1,
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum lnGpioMode {
    lnFLOATING = 0,
    lnINPUT_FLOATING = 1,
    lnINPUT_PULLUP = 2,
    lnINPUT_PULLDOWN = 3,
    lnOUTPUT = 4,
    lnOUTPUT_OPEN_DRAIN = 5,
    lnALTERNATE_PP = 6,
    lnALTERNATE_OD = 7,
    lnPWM = 8,
    lnADC_MODE = 9,
    lnDAC_MODE = 10,
    lnUART = 11,
    lnSPI_MODE = 12,
    lnUART_Alt = 13,
}
unsafe extern "C" {
    #[link_name = "\u{1}_Z9lnPinMode5lnPin10lnGpioModei"]
    pub fn lnPinMode(pin: lnPin, mode: lnGpioMode, speedInMhz: cty::c_int);
}
unsafe extern "C" {
    #[link_name = "\u{1}_Z14lnDigitalWrite5lnPinb"]
    pub fn lnDigitalWrite(pin: lnPin, value: bool);
}
unsafe extern "C" {
    #[link_name = "\u{1}_Z13lnDigitalRead5lnPin"]
    pub fn lnDigitalRead(pin: lnPin) -> bool;
}
unsafe extern "C" {
    #[link_name = "\u{1}_Z15lnDigitalToggle5lnPin"]
    pub fn lnDigitalToggle(pin: lnPin);
}
unsafe extern "C" {
    #[link_name = "\u{1}_Z16lnOpenDrainClose5lnPinb"]
    pub fn lnOpenDrainClose(pin: lnPin, close: bool);
}
unsafe extern "C" {
    #[link_name = "\u{1}_Z23lnGetGpioToggleRegisteri"]
    pub fn lnGetGpioToggleRegister(port: cty::c_int) -> *mut cty::c_uint;
}
unsafe extern "C" {
    #[link_name = "\u{1}_Z26lnGetGpioDirectionRegisteri"]
    pub fn lnGetGpioDirectionRegister(port: cty::c_int) -> *mut cty::c_uint;
}
unsafe extern "C" {
    #[link_name = "\u{1}_Z22lnGetGpioValueRegisteri"]
    pub fn lnGetGpioValueRegister(port: cty::c_int) -> *mut cty::c_uint;
}
unsafe extern "C" {
    #[link_name = "\u{1}_Z10lnReadPorti"]
    pub fn lnReadPort(port: cty::c_int) -> cty::c_uint;
}
pub const LnRemapTimer_NoRemap: LnRemapTimer = 0;
pub const LnRemapTimer_PartialRemap: LnRemapTimer = 1;
pub const LnRemapTimer_FullRemap: LnRemapTimer = 3;
pub type LnRemapTimer = cty::c_uint;
unsafe extern "C" {
    #[link_name = "\u{1}_Z15lnRemapTimerPinj12LnRemapTimer"]
    pub fn lnRemapTimerPin(timer: cty::c_uint, map: LnRemapTimer);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lnFastIO {
    pub _on: *mut cty::c_uint,
    pub _off: *mut cty::c_uint,
    pub _bit: cty::c_uint,
}
unsafe extern "C" {
    #[link_name = "\u{1}_ZN8lnFastIOC1E5lnPin"]
    pub fn lnFastIO_lnFastIO(this: *mut lnFastIO, p: lnPin);
}
impl lnFastIO {
    #[inline]
    pub unsafe fn new(p: lnPin) -> Self {
        let mut __bindgen_tmp = ::core::mem::MaybeUninit::uninit();
        lnFastIO_lnFastIO(__bindgen_tmp.as_mut_ptr(), p);
        __bindgen_tmp.assume_init()
    }
}
unsafe extern "C" {
    #[link_name = "\u{1}_Z19lnGetGpioOnRegisteri"]
    pub fn lnGetGpioOnRegister(port: cty::c_int) -> *mut cty::c_uint;
}
unsafe extern "C" {
    #[link_name = "\u{1}_Z20lnGetGpioOffRegisteri"]
    pub fn lnGetGpioOffRegister(port: cty::c_int) -> *mut cty::c_uint;
}
